--- a/css/styles.css
+++ b/css/styles.css
@@ -289,11 +289,9 @@ display: flex;
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-   
-    
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
+
 
 .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0.9);
@@ -327,6 +325,92 @@ display: flex;
     position: absolute;
 
 }
+
+.header-modal {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 1.15;
+text-align: center;
+letter-spacing: 0.03em;
+margin-top:40px; 
+margin-bottom: 30px;
+
+}
+
+.forms {
+    width: 448px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+ .form-modal {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 28px;
+    
+} 
+
+.form-modal input {
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 12px 42px;
+
+}
+    
+
+.label-modal {
+    position: absolute;
+    transform: translateY(-100%);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--text-color);
+}
+
+
+.form-modal input::placeholder {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    top: 0px;
+    left: 0px;
+}
+
+.form-modal .comments {
+    height: 120px;
+    padding: 12px 16px;
+    resize: none;
+    
+}
+
+textarea {
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 12px 16px;
+
+}
+
+
+
+.form-modal.terms {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: var(--text-color);}
+
 
 
 
