--- a/css/styles.css
+++ b/css/styles.css
@@ -335,7 +335,7 @@ line-height: 1.15;
 text-align: center;
 letter-spacing: 0.03em;
 margin-top:40px; 
-margin-bottom: 30px;
+margin-bottom: 12px;
 
 }
 
@@ -361,8 +361,8 @@ margin-bottom: 30px;
     
 
 .label-modal {
-    position: absolute;
-    transform: translateY(-100%);
+    text-align: left;
+    margin-bottom: 4px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -389,17 +389,17 @@ margin-bottom: 30px;
     height: 120px;
     padding: 12px 16px;
     resize: none;
+    margin-bottom: 20px;
     
 }
 
-textarea {
+.form-modal.comments textarea {
     resize: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding: 12px 16px;
 
 }
-
 
 
 .form-modal.terms {
@@ -409,9 +409,31 @@ font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
-color: var(--text-color);}
+color: var(--text-color);
+display: block;
+}
 
+/* .checkbox {
+    color: var(--black-color);
 
+} */
+
+.contract {
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+text-decoration-line: underline;
+color:var(--blue-color);
+
+}
+
+.forms .button-primary {
+    margin-top: 0;
+    margin-bottom: 40px;
+}
 
 
 /**Section 2*/
