--- a/css/styles.css
+++ b/css/styles.css
@@ -326,6 +326,14 @@ display: flex;
 
 }
 
+/**Формы**/
+
+.close-svg:focus,
+.close-svg:hover {
+    fill: var(--blue-color);
+}
+
+
 .header-modal {
 font-family: 'Roboto';
 font-style: normal;
@@ -348,16 +356,31 @@ margin-bottom: 12px;
  .form-modal {
     display: flex;
     flex-direction: column;
-    margin-bottom: 28px;
+    margin-bottom: 10px;
+    position: relative;
     
 } 
 
 .form-modal input {
+    outline: 0;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding: 12px 42px;
+    
+    }
+    
 
-}
+.form-modal input:focus {
+    
+    border: 1px solid var(--blue-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+   }
+
+.form-modal input:focus + .modal-svg {
+    fill: var(--blue-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   }
     
 
 .label-modal {
@@ -370,10 +393,11 @@ margin-bottom: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
     color: var(--text-color);
+    
 }
 
 
-.form-modal input::placeholder {
+.form-modal .comment-text::placeholder {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -384,6 +408,7 @@ margin-bottom: 12px;
     top: 0px;
     left: 0px;
 }
+
 
 .form-modal .comments {
     height: 120px;
@@ -401,6 +426,13 @@ margin-bottom: 12px;
 
 }
 
+.form-modal.comments textarea:focus {
+    outline: 0;
+    border: 1px solid var(--blue-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+   }
+
 
 .form-modal.terms {
 font-family: 'Roboto';
@@ -411,22 +443,21 @@ line-height: 1.71;
 letter-spacing: 0.03em;
 color: var(--text-color);
 display: block;
+margin-bottom: 30px;
+
 }
 
-/* .checkbox {
-    color: var(--black-color);
-
-} */
 
 .contract {
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-text-decoration-line: underline;
-color:var(--blue-color);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    text-decoration-line: underline;
+    color:var(--blue-color);
+    margin-left: 5px;
 
 }
 
@@ -435,8 +466,45 @@ color:var(--blue-color);
     margin-bottom: 40px;
 }
 
+.modal-svg {
+    position: absolute;
+    outline: 0;
+    left: 12px;
+    transform: translateY(170%);
+}
+
+.form-modal input.checkbox-form {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: 0;
+    position: absolute;
+}
+
+  .icon-checkbox {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--black-color);
+    border-radius: 2px;
+    margin-right: 8.38px;
+    
+}  
+
+.terms-checkbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
+
 
 /**Section 2*/
+
+
 .features {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -889,6 +957,9 @@ background-color: rgba(255, 255, 255, 0.1);;
 .social-footer .social-link {
     fill: var(--white-color);
 }
+
+
+
 
 .form-footer {
     margin-left: 94px;
