--- a/css/styles.css
+++ b/css/styles.css
@@ -507,9 +507,9 @@ align-items: center;
     border-color: var(--blue-color);
     background-color: var(--blue-color);
     background-image: url(../images/img.svg/img6.svg);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
-    
-} 
+    } 
 
 
 
