--- a/css/styles.css
+++ b/css/styles.css
@@ -353,7 +353,8 @@ margin-bottom: 12px;
     margin-right: auto;
 }
 
- .form-modal {
+ .form-modal,
+ .input-svg {
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
@@ -366,6 +367,7 @@ margin-bottom: 12px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding: 12px 42px;
+    height: 40px;
     
     }
     
@@ -409,21 +411,13 @@ margin-bottom: 12px;
     left: 0px;
 }
 
-
-.form-modal .comments {
-    height: 120px;
-    padding: 12px 16px;
-    resize: none;
-    margin-bottom: 20px;
-    
-}
-
 .form-modal.comments textarea {
     resize: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding: 12px 16px;
-
+    height: 120px;
+    margin-bottom: 20px;
 }
 
 .form-modal.comments textarea:focus {
@@ -474,8 +468,15 @@ align-items: center;
     position: absolute;
     outline: 0;
     left: 12px;
-    transform: translateY(170%);
+    top: 50%;
+    transform: translateY(-50%);
 }
+
+.input-svg {
+    position: relative;
+    
+}
+
 
 .form-modal input.checkbox-form {
     position: absolute;
@@ -991,7 +992,9 @@ background-color: rgba(255, 255, 255, 0.1);;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: var(--bg-color-first);
-    padding: 0px;
+    color: var(--white-color);
+    padding: 15px 16px;
+    outline: none;
 }
 
 .form-footer input::placeholder {
@@ -1003,8 +1006,11 @@ display: flex;
 align-items: center;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
-padding-left: 16px;
+
+
 }
+
+
 
 .button-primary-footer {
     padding: 10px 28px;
@@ -1042,3 +1048,4 @@ padding-left: 16px;
     display: flex;
    
 }
+
